Amenities fix on small screen
amenities card elementrs centraliced on screens smaller than 436px

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -178,3 +178,10 @@ footer li {
 .about {
   height: 602px;
 }
+
+@media screen and (max-width:432px) {
+  .amenities-text {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
